tests/error/tracing_errors/bad_binary2.py
from guppylang.decorator import guppy


@guppy.comptime
def test(x: int) -> int:
    return (1, 2) + x


guppy.compile(test)
